--- a/src/shared/Shared/Shared.csproj
+++ b/src/shared/Shared/Shared.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\..\..\shared\Shared\Shared.csproj"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
     </ItemGroup>
 
 </Project>
