--- a/src/modules/food/Food.Endpoints/Food.Endpoints.csproj
+++ b/src/modules/food/Food.Endpoints/Food.Endpoints.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\Food.Infrastructure\Food.Infrastructure.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
 </Project>
