--- a/src/modules/nutrient/Nutrient.Module/Nutrient.Module.csproj
+++ b/src/modules/nutrient/Nutrient.Module/Nutrient.Module.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Nutrient.Application\Nutrient.Application.csproj"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\shared\Shared\Shared.csproj"/>
     </ItemGroup>
 
 </Project>
