--- a/src/API/API.csproj
+++ b/src/API/API.csproj
@@ -12,9 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\modules\food\Food.Module\Food.Module.csproj"/>
-        <ProjectReference Include="..\modules\nutrient\Nutrient.Module\Nutrient.Module.csproj"/>
-        <ProjectReference Include="..\modules\security\Security.Module\Security.Module.csproj"/>
+        <ProjectReference Include="..\Infrastructura\Infrastructura.csproj"/>
     </ItemGroup>
 
 </Project>
