Add domain models for food and value objects
Signed-off-by: Maximiliano Barrientos Nunez <elbodysathba@gmail.com>

--- a/tests/Unit.Tests/Unit.Tests.csproj
+++ b/tests/Unit.Tests/Unit.Tests.csproj
@@ -22,4 +22,11 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\..\src\API\API.csproj"/>
+        <ProjectReference Include="..\..\src\Application\Application.csproj"/>
+        <ProjectReference Include="..\..\src\Domain\Domain.csproj"/>
+        <ProjectReference Include="..\..\src\Infrastructura\Infrastructura.csproj"/>
+    </ItemGroup>
+
 </Project>
